# utilities-util

./: .gitignore  README.md  pyproject.toml
src/api/: handler.py
src/api/route/: bill.py  email.py  housemate.py
src/common/database/: postgres.py  scratch.py
src/common/models/: bill.py  email.py  housemate.py  payment.py  utility.py
src/common/poll_email/: handler.py  scratch.py
src/integrations/: gmail.py
